[script]bugfix 修复安装包启动脚本